--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PUBLIC_CONSOLE_MODE=self-hosted
-PUBLIC_CONSOLE_FEATURE_FLAGS=
+PUBLIC_CONSOLE_FEATURE_FLAGS=sites,csv-import,attribute-encrypt
 PUBLIC_APPWRITE_MULTI_REGION=false
 PUBLIC_APPWRITE_ENDPOINT=http://localhost/v1
 PUBLIC_STRIPE_KEY=
