--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "highlight.js": "^11.11.1",
     "jsdom": "^26.0.0",
     "kleur": "^4.1.5",
+    "motion": "^12.23.6",
     "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
     "rehype-highlight": "^7.0.2",
