--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ PUBLIC_APPWRITE_MULTI_REGION=false
 PUBLIC_APPWRITE_ENDPOINT=http://localhost/v1
 PUBLIC_STRIPE_KEY=
 PUBLIC_GROWTH_ENDPOINT=
+PUBLIC_AI_SERVICE_BASE_URL=http://localhost:8889
