--- a/ai-service/tsconfig.json
+++ b/ai-service/tsconfig.json
@@ -6,7 +6,6 @@
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
-    "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
@@ -14,7 +13,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "plugins": [],
+    "composite": true,
+    "declaration": true,
     "paths": {
       "@/*": ["./src/*"]
     }
