--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite dev",
     "build": "node build.js",
     "preview": "vite preview",
-    "prepare": "svelte-kit sync",
+    "prepare": "svelte-kit sync || echo ''",
     "clean": "rm -rf node_modules && rm -rf .svelte_kit && pnpm i --force",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
@@ -81,7 +81,7 @@
     "prettier-plugin-svelte": "^3.3.3",
     "rehype-highlight": "^7.0.2",
     "sass": "^1.86.0",
-    "svelte": "^5.25.3",
+    "svelte": "^5.36.3",
     "svelte-check": "^4.1.5",
     "svelte-preprocess": "^6.0.3",
     "svelte-sequential-preprocessor": "^2.0.2",
