--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
-        "moduleResolution": "bundler"
+        "moduleResolution": "bundler",
+        "declaration": true,
     },
     "references": [
         { "path": "./ai-service" }
