--- a/ai-service/tsconfig.json
+++ b/ai-service/tsconfig.json
@@ -20,5 +20,5 @@
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "dist", "tmp"]
 }
