add docker stuff

--- a/ai-service/Dockerfile
+++ b/ai-service/Dockerfile
@@ -1,4 +1,7 @@
-FROM --platform=$BUILDPLATFORM node:22-alpine AS build
+FROM --platform=$BUILDPLATFORM node:22-alpine
+
+RUN apk add --no-cache git
+RUN apk add --no-cache bash
 
 WORKDIR /app
 
@@ -7,6 +10,7 @@ ENV PATH="$PNPM_HOME:$PATH"
 RUN npm i -g corepack@latest
 RUN corepack enable
 RUN corepack prepare pnpm@10.0.0 --activate
+RUN pnpm install -g bun
 
 ADD ./package.json /app/package.json
 ADD ./pnpm-lock.yaml /app/pnpm-lock.yaml
@@ -16,3 +20,5 @@ RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --frozen-lockfile
 ADD ./ /app/
 
 RUN pnpm run build
+
+CMD ["pnpm", "run", "start"]
