--- a/ai-service/package.json
+++ b/ai-service/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rimraf dist && tsup"
+    "build": "rimraf dist && tsup",
+    "start": "node dist/server.mjs"
   },
   "keywords": [],
   "author": "",
