--- a/ai-service/docker-compose.yml
+++ b/ai-service/docker-compose.yml
@@ -11,3 +11,5 @@ services:
         environment:
           SYNAPSE_ENDPOINT: http://host.docker.internal:3001
           APPWRITE_ENDPOINT: http://host.docker.internal:80/v1
+        volumes:
+          - ./tmp:/app/tmp
