--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ PUBLIC_APPWRITE_ENDPOINT=http://localhost/v1
 PUBLIC_STRIPE_KEY=
 PUBLIC_GROWTH_ENDPOINT=
 PUBLIC_AI_SERVICE_BASE_URL=http://localhost:8889
+WORKSPACE_URL_PROTOCOL=http
+WORKSPACE_URL_DOMAIN=functions.localhost
+WORKSPACE_URL_PORT=4002
