--- a/ai-service/.env.example
+++ b/ai-service/.env.example
@@ -1,2 +1,5 @@
 ANTHROPIC_API_KEY=
 APPWRITE_ENDPOINT=http://localhost/v1
+WORKSPACE_URL_PROTOCOL=http
+WORKSPACE_URL_DOMAIN=functions.localhost
+WORKSPACE_URL_PORT=4002
