--- a/ai-service/package.json
+++ b/ai-service/package.json
@@ -27,6 +27,8 @@
     "@ai-sdk/react": "2.0.0-beta.10",
     "@ai-sdk/vercel": "1.0.0-beta.3",
     "@appwrite.io/console": "^1.9.0",
+    "@daytonaio/api-client": "^0.24.2",
+    "@daytonaio/sdk": "^0.24.2",
     "@eslint/eslintrc": "^3",
     "@hono/node-server": "^1.16.0",
     "@mastra/core": "0.0.0-ai-v5-20250710191716",
