--- a/ai-service/package.json
+++ b/ai-service/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "tsx watch src/server.ts --include \"./src/**/*\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf dist && tsup",
     "start": "node dist/server.mjs"
