--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "dependencies": {
         "@ai-sdk/svelte": "^1.1.24",
         "@appwrite.io/console": "https://pkg.pr.new/appwrite-labs/cloud/@appwrite.io/console@8836b0c",
+        "@appwrite.io/pink": "^1.0.0",
         "@appwrite.io/pink-icons": "0.25.0",
-        "@appwrite.io/pink-icons-svelte": "^2.0.0-RC.1",
+        "@appwrite.io/pink-icons-svelte": "https://pkg.vc/-/@appwrite/%40appwrite.io%2Fpink-icons-svelte@dbbb00f",
         "@appwrite.io/pink-legacy": "^1.0.3",
-        "@appwrite.io/pink-svelte": "https://pkg.pr.new/appwrite/pink/@appwrite.io/pink-svelte@fee5c53",
+        "@appwrite.io/pink-svelte": "https://pkg.vc/-/@appwrite/%40appwrite.io%2Fpink-svelte@dbbb00f",
         "@popperjs/core": "^2.11.8",
         "@sentry/sveltekit": "^8.38.0",
         "@stripe/stripe-js": "^3.5.0",
