add: console mock suggestions env.

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ PUBLIC_APPWRITE_ENDPOINT=http://localhost/v1
 PUBLIC_STRIPE_KEY=
 PUBLIC_GROWTH_ENDPOINT=
 PUBLIC_CONSOLE_EMAIL_VERIFICATION=false
+PUBLIC_CONSOLE_MOCK_AI_SUGGESTIONS=true
