--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+PUBLIC_CONSOLE_PROFILE=
 PUBLIC_CONSOLE_MODE=self-hosted
 PUBLIC_CONSOLE_FEATURE_FLAGS=
 PUBLIC_APPWRITE_MULTI_REGION=false
@@ -6,3 +7,4 @@ PUBLIC_STRIPE_KEY=
 PUBLIC_GROWTH_ENDPOINT=
 PUBLIC_CONSOLE_EMAIL_VERIFICATION=false
 PUBLIC_CONSOLE_MOCK_AI_SUGGESTIONS=true
+PUBLIC_AI_SERVICE_BASE_URL=
