--- a/package.json
+++ b/package.json
@@ -28,63 +28,67 @@
         "@appwrite.io/pink-legacy": "^1.0.3",
         "@appwrite.io/pink-svelte": "https://pkg.vc/-/@appwrite/@appwrite.io/pink-svelte@8f82877",
         "@faker-js/faker": "^9.9.0",
+        "@imagine.dev/web-components": "0.0.8",
         "@popperjs/core": "^2.11.8",
-        "@sentry/sveltekit": "^8.38.0",
+        "@sentry/sveltekit": "^8.55.0",
         "@stripe/stripe-js": "^3.5.0",
         "ai": "^2.2.37",
-        "analytics": "^0.8.16",
+        "analytics": "^0.8.19",
         "cron-parser": "^4.9.0",
-        "dayjs": "^1.11.13",
+        "dayjs": "^1.11.18",
         "deep-equal": "^2.2.3",
         "echarts": "^5.6.0",
         "ignore": "^6.0.2",
-        "nanoid": "^5.1.5",
+        "nanoid": "^5.1.6",
         "nanotar": "^0.1.1",
         "plausible-tracker": "^0.3.9",
         "pretty-bytes": "^6.1.1",
         "prismjs": "^1.30.0",
+        "react": "^19.2.0",
+        "react-dom": "^19.2.0",
         "remarkable": "^2.0.1",
         "svelte-confetti": "^1.4.0",
+        "svelte-reparent": "^0.0.1",
         "tippy.js": "^6.3.7"
     },
     "devDependencies": {
-        "@eslint/compat": "^1.3.1",
-        "@eslint/js": "^9.31.0",
+        "@eslint/compat": "^1.4.0",
+        "@eslint/js": "^9.37.0",
         "@melt-ui/pp": "^0.3.2",
-        "@melt-ui/svelte": "^0.86.5",
-        "@playwright/test": "^1.51.1",
-        "@sveltejs/adapter-static": "^3.0.8",
-        "@sveltejs/kit": "^2.42.1",
-        "@sveltejs/vite-plugin-svelte": "^5.0.3",
-        "@testing-library/dom": "^10.4.0",
-        "@testing-library/jest-dom": "^6.6.3",
+        "@melt-ui/svelte": "^0.86.6",
+        "@playwright/test": "^1.56.0",
+        "@sveltejs/adapter-static": "^3.0.10",
+        "@sveltejs/kit": "^2.46.2",
+        "@sveltejs/vite-plugin-svelte": "^5.1.1",
+        "@testing-library/dom": "^10.4.1",
+        "@testing-library/jest-dom": "^6.9.1",
         "@testing-library/svelte": "^5.2.8",
         "@testing-library/user-event": "^14.6.1",
         "@types/deep-equal": "^1.0.4",
         "@types/prismjs": "^1.26.5",
         "@types/remarkable": "^2.0.8",
-        "@typescript-eslint/eslint-plugin": "^8.28.0",
-        "@typescript-eslint/parser": "^8.28.0",
+        "@typescript-eslint/eslint-plugin": "^8.46.0",
+        "@typescript-eslint/parser": "^8.46.0",
         "@vitest/ui": "^3.2.4",
-        "color": "^5.0.0",
-        "eslint": "^9.31.0",
-        "eslint-config-prettier": "^10.1.0",
-        "eslint-plugin-svelte": "^3.3.3",
-        "globals": "^16.0.0",
+        "color": "^5.0.2",
+        "eslint": "^9.37.0",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-svelte": "^3.12.4",
+        "globals": "^16.4.0",
         "jsdom": "^26.1.0",
         "kleur": "^4.1.5",
-        "prettier": "^3.5.3",
-        "prettier-plugin-svelte": "^3.3.3",
-        "sass": "^1.86.0",
-        "svelte": "^5.25.3",
-        "svelte-check": "^4.1.5",
+        "prettier": "^3.6.2",
+        "prettier-plugin-svelte": "^3.4.0",
+        "sass": "^1.93.2",
+        "svelte": "^5.39.10",
+        "svelte-check": "^4.3.2",
         "svelte-preprocess": "^6.0.3",
         "svelte-sequential-preprocessor": "^2.0.2",
-        "tldts": "^7.0.7",
+        "tldts": "^7.0.16",
         "tslib": "^2.8.1",
-        "typescript": "^5.8.2",
-        "typescript-eslint": "^8.30.1",
-        "vite": "^7.0.6",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.46.0",
+        "vite": "^7.1.9",
         "vitest": "^3.2.4"
     },
     "pnpm": {
@@ -95,5 +99,5 @@
             "svelte-preprocess"
         ]
     },
-    "packageManager": "pnpm@10.15.1"
+    "packageManager": "pnpm@10.18.1+sha512.77a884a165cbba2d8d1c19e3b4880eee6d2fcabd0d879121e282196b80042351d5eb3ca0935fa599da1dc51265cc68816ad2bddd2a2de5ea9fdf92adbec7cd34"
 }
