--- a/package.json
+++ b/package.json
@@ -22,12 +22,22 @@
     },
     "dependencies": {
         "@ai-sdk/svelte": "^1.1.24",
-        "@appwrite.io/console": "https://pkg.pr.new/appwrite-labs/cloud/@appwrite.io/console@2659",
+        "@appwrite.io/console": "https://pkg.pr.new/appwrite-labs/cloud/@appwrite.io/console@de078ac",
         "@appwrite.io/pink-icons": "0.25.0",
         "@appwrite.io/pink-icons-svelte": "https://pkg.vc/-/@appwrite/@appwrite.io/pink-icons-svelte@8f82877",
         "@appwrite.io/pink-legacy": "^1.0.3",
         "@appwrite.io/pink-svelte": "https://pkg.vc/-/@appwrite/@appwrite.io/pink-svelte@8f82877",
+        "@codemirror/autocomplete": "^6.19.0",
+        "@codemirror/commands": "^6.9.0",
+        "@codemirror/lang-javascript": "^6.2.4",
+        "@codemirror/lang-json": "^6.0.2",
+        "@codemirror/language": "^6.11.3",
+        "@codemirror/lint": "^6.9.0",
+        "@codemirror/search": "^6.5.11",
+        "@codemirror/state": "^6.5.2",
+        "@codemirror/view": "^6.38.6",
         "@faker-js/faker": "^9.9.0",
+        "@lezer/highlight": "^1.2.1",
         "@popperjs/core": "^2.11.8",
         "@sentry/sveltekit": "^8.38.0",
         "@stripe/stripe-js": "^3.5.0",
@@ -38,6 +48,7 @@
         "deep-equal": "^2.2.3",
         "echarts": "^5.6.0",
         "ignore": "^6.0.2",
+        "json5": "^2.2.3",
         "nanoid": "^5.1.5",
         "nanotar": "^0.1.1",
         "plausible-tracker": "^0.3.9",
