Update imagine workflow to run on schedule

--- a/.github/workflows/update-imagine.yml
+++ b/.github/workflows/update-imagine.yml
@@ -1,12 +1,10 @@
 name: Update @appwrite/imagine Package
 
 on:
-  workflow_dispatch:
-    inputs:
-      commit_message:
-        description: 'Custom commit message (optional)'
-        required: false
-        default: 'chore: update @appwrite/imagine package'
+  schedule:
+    # Run every 5 minutes
+    - cron: '*/5 * * * *'
+
 
 jobs:
   update-imagine:
