--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "tippy.js": "^6.3.7"
     },
     "devDependencies": {
+        "dotenv": "^17.2.3",
         "@eslint/compat": "^1.3.1",
         "@eslint/js": "^9.31.0",
         "@melt-ui/pp": "^0.3.2",
@@ -85,7 +86,8 @@
         "typescript": "^5.8.2",
         "typescript-eslint": "^8.30.1",
         "vite": "^7.0.6",
-        "vitest": "^3.2.4"
+        "vitest": "^3.2.4",
+        "@types/node": "^24.9.2"
     },
     "pnpm": {
         "onlyBuiltDependencies": [
