update: ci and tests.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -12,16 +12,30 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
+
             - name: Use Node.js
-              uses: actions/setup-node@v3
+              uses: actions/setup-node@v4
               with:
                   node-version: 20
+                  cache: 'pnpm'
+
             - name: Install pnpm
               uses: pnpm/action-setup@v4
+
+            - name: Cache Playwright browsers
+              uses: actions/cache@v4
+              with:
+                  path: ~/.cache/ms-playwright
+                  key: playwright-${{ runner.os }}-${{ hashFiles('pnpm-lock.yaml') }}
+                  restore-keys: |
+                      playwright-${{ runner.os }}-
+
             - name: Install dependencies
               run: pnpm install --frozen-lockfile
+
             - name: Install Playwright Browsers
-              run: pnpm exec playwright install --with-deps chromium
+              run: pnpm exec playwright install chromium
+
             - name: E2E Tests
               run: pnpm run e2e
             - uses: actions/upload-artifact@v4
