--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "test": "TZ=EST vitest run",
         "test:ui": "TZ=EST vitest --ui",
         "test:watch": "TZ=EST vitest watch",
-        "e2e": "playwright test",
+        "e2e": "playwright test --reporter=list",
         "e2e:ui": "playwright test --ui"
     },
     "dependencies": {
