--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,21 +15,30 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
+
             - name: Use Node.js
-              uses: actions/setup-node@v3
+              uses: actions/setup-node@v4
               with:
                   node-version: 20
+                  cache: 'pnpm'
+
             - name: Install pnpm
               uses: pnpm/action-setup@v4
+
             - name: Audit dependencies
               run: pnpm audit --audit-level high
+
             - name: Install dependencies
               run: pnpm install --frozen-lockfile
+
             - name: Svelte Diagnostics
               run: pnpm run check
+
             - name: Linter
               run: pnpm run lint
+
             - name: Unit Tests
               run: pnpm run test
+
             - name: Build Console
               run: pnpm run build
