--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,6 +8,8 @@ on:
             - 'static/**/*'
 
 env:
+    PUBLIC_CONSOLE_PROFILE: ''
+    PUBLIC_AI_SERVICE_BASE_URL: ''
     PUBLIC_APPWRITE_ENDPOINT: http://appwrite.test/v1
 
 jobs:
