--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "deep-equal": "^2.2.3",
         "echarts": "^5.6.0",
         "ignore": "^6.0.2",
+        "install": "^0.13.0",
         "nanoid": "^5.1.5",
         "nanotar": "^0.1.1",
         "plausible-tracker": "^0.3.9",
