--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
         "color": "^5.0.2",
         "eslint": "^9.37.0",
         "eslint-config-prettier": "^10.1.8",
-        "eslint-plugin-svelte": "^3.12.4",
+        "eslint-plugin-svelte": "^3.3.3",
         "globals": "^16.4.0",
         "jsdom": "^26.1.0",
         "kleur": "^4.1.5",
@@ -99,5 +99,5 @@
             "svelte-preprocess"
         ]
     },
-    "packageManager": "pnpm@10.18.1+sha512.77a884a165cbba2d8d1c19e3b4880eee6d2fcabd0d879121e282196b80042351d5eb3ca0935fa599da1dc51265cc68816ad2bddd2a2de5ea9fdf92adbec7cd34"
+    "packageManager": "pnpm@10.20.0"
 }
