--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
         "color": "^5.0.2",
         "eslint": "^9.37.0",
         "eslint-config-prettier": "^10.1.8",
-        "eslint-plugin-svelte": "^3.3.3",
+        "eslint-plugin-svelte": "^3.12.4",
         "globals": "^16.4.0",
         "jsdom": "^26.1.0",
         "kleur": "^4.1.5",
@@ -81,12 +81,12 @@
         "prettier-plugin-svelte": "^3.4.0",
         "sass": "^1.93.2",
         "svelte": "^5.39.10",
-        "svelte-check": "^4.1.5",
+        "svelte-check": "^4.3.2",
         "svelte-preprocess": "^6.0.3",
         "svelte-sequential-preprocessor": "^2.0.2",
         "tldts": "^7.0.16",
         "tslib": "^2.8.1",
-        "typescript": "^5.8.2",
+        "typescript": "^5.9.3",
         "typescript-eslint": "^8.46.0",
         "vite": "^7.1.9",
         "vitest": "^3.2.4"
@@ -99,5 +99,5 @@
             "svelte-preprocess"
         ]
     },
-    "packageManager": "pnpm@10.20.0"
+    "packageManager": "pnpm@10.18.1+sha512.77a884a165cbba2d8d1c19e3b4880eee6d2fcabd0d879121e282196b80042351d5eb3ca0935fa599da1dc51265cc68816ad2bddd2a2de5ea9fdf92adbec7cd34"
 }
