Use CDN URL from PUBLIC_IMAGINE_CDN_URL

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ PUBLIC_GROWTH_ENDPOINT=
 PUBLIC_CONSOLE_EMAIL_VERIFICATION=false
 PUBLIC_CONSOLE_MOCK_AI_SUGGESTIONS=true
 PUBLIC_AI_SERVICE_BASE_URL=
+PUBLIC_IMAGINE_CDN_URL=
